Fixed focus-bug on mobile nav

--- a/app/assets/less/components/_component_header.less
+++ b/app/assets/less/components/_component_header.less
@@ -76,7 +76,7 @@
     .icon {}
     #logo-hiof {
       svg {
-      	margin-left: 0;
+      	margin-left: -1.6rem;
         .text {
           opacity: 0;
         }
